cmake_minimum_required(VERSION 3.14)
project(Ej_4)

set(CMAKE_CXX_STANDARD 14)

add_executable(Ej_4
        Debug/Ej.4.tlog/CL.command.1.tlog
        Debug/Ej.4.tlog/Ej.4.lastbuildstate
        Debug/Ej.4.tlog/link.command.1.tlog
        Debug/Ej.4.tlog/link.read.1.tlog
        Debug/Ej.4.tlog/link.write.1.tlog
        Debug/Ej.4.tlog/unsuccessfulbuild
        Debug/Ej.4.log
        Debug/vc142.idb
        Debug/vc142.pdb
        Source.cpp)
